--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <form class="w3-container">
                <h3 id = "hc" class = "w3-white">Converting your video</h3>
                <div id= "video-content" class="w3-section">
-                  <img id="loaderimg" src="loading.svg" width:"100" height:"100">
-                  <img id="errorimg" src="error.png" width:"100" height:"100" style="display:none;">
+                  <img id="loaderimg" alt="loading" src="loading.svg" width:"100" height:"100">
+                  <img id="errorimg" alt="error" src="error.png" width:"100" height:"100" style="display:none;">
                </div>
                <div id="whileloading" class ="w3-white w3-padding">
                   <div class ="w3-animate-opacity">Finding your video</div>
