--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	    <meta property="og:image:width" content="480" />
 	    <meta property="og:image:height" content="246" />
 	    <meta property="og:type" content="website" />
-      <title>Convert Youtube to Mp4 fast online</title>
+      <title>Convert Youtube to Mp4 online</title>
       <link rel="alternate" href="https://youtube-mp4.club/" hreflang="en" />
       <link rel="alternate" href="https://youtube-mp4.club/" hreflang="x-default" />
       
