--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
          <header class="w3-container w3-theme w3-padding" id="myHeader">
             <div class="w3-center">
                <h1 class="w3-xxxlarge">Convert Youtube to MP4</h1>
-               <h5 class="">Youtube to mp4 free converter online</h5>
+               <h5 class="">Free YouTube to MP4 converter</h5>
             </div>
          </header>
          <div class="w3-container w3-card-4 w3-light-grey w3-theme w3-margin w3-round">
