--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
             </div>
          </header>
          <div class="w3-container w3-card-4 w3-light-grey w3-theme w3-margin w3-round">
-            <!--<i style = "font-size:25px;">(e.g. https://www.youtube.com/watch?v=_LBmUwi6mEo)</i>-->
-            <h2 class="w3-center">Youtube Video URL</h2>
+            <label class="w3-center" for="videourl"><h2 >Youtube Video URL</h2></label>
             <div class="w3-row w3-section">
                <div class="w3-col" style="width:50px"><i class="w3-xlarge"></i></div>
                <div class="w3-rest">
