--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
          </div>
       </div>
       <footer class="w3-container w3-center w3-theme w3-xlarge" style ="position:fixed;bottom:0px">
-         <a href = "https://www.facebook.com/sharer/sharer.php?u=https://ioplay.ga" class="w3-opacity fa fa-facebook-official w3-hover-opacity"></a>
-         <a href = "https://twitter.com/intent/tweet?text=Fastest Youtube to Mp4 converter online! https://ioplay.ga&&hashtags=YoutubeConverter,mp4" class="w3-opacity fa fa-twitter w3-hover-opacity"></a>
+         <a href = "https://www.facebook.com/sharer/sharer.php?u=https://ioplay.ga" class="w3-opacity fa fa-facebook-official w3-hover-opacity" aria-label="Share on facebook"></a>
+         <a href = "https://twitter.com/intent/tweet?text=Fastest Youtube to Mp4 converter online! https://ioplay.ga&&hashtags=YoutubeConverter,mp4" class="w3-opacity fa fa-twitter w3-hover-opacity" aria-label="Share on twitter"></a>
          <a href = "https://discord.gg/uu5ram8" class="w3-opacity w3-hover-opacity">Discord</a>
          <iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" class="twitter-follow-button twitter-follow-          button-rendered" style="position: static; scale:0.7;visibility: visible; width: 70px; height: 25px;padding-top:5px;" title="Twitter Follow Button" src="https://platform.twitter.com/widgets/follow_button.1025be460f33762a866ea882e1687ff4.en.html#dnt=false&amp;id=twitter-widget-          0&amp;lang=en&amp;screen_name=Centipede5dev&amp;show_count=false&amp;show_screen_name=false&amp;size=m&amp;time=1534786857935" data="" -screen-name="Centipede5dev"></iframe>
       </footer>
