--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Youtube mp4 is the best youtube to mp4 free converter. Convert youtube videos for free to mp4 and webm formats">
+      <meta name="description" content="Youtube mp4 is the best free youtube to mp4 converter. Convert youtube videos for free to mp4 and webm formats">
       <meta name="keywords" content="YouTube, Converter, Fast, Convert YouTube to Mp4, Youtube mp4 free converter, Videos to Mp4, YouTube to WEBM" />
       <meta name="author" content="Centipede5">
       <meta property="og:url" content="https://youtube-mp4.club/" />
