--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 <div  style ="margin-top:40px;">
 <header class="w3-container w3-theme w3-padding" id="myHeader">
   <div class="w3-center">
-    <h1 class="w3-xxxlarge">About ioplay.ga</h1>
+    <h1 class="w3-xxxlarge">About youtube-mp4.club</h1>
     <h5 class="">Free, safe and fast youtube to mp4 converter online</h5>
   </div>
 </header>
@@ -29,11 +29,11 @@
       <h3>FAQ:</h3>
       <div class="w3-panel w3-pale-red w3-leftbar w3-rightbar w3-border-red">
         <h5>Q:Why should I use this converter instead of others?</h5>
-        <p>A:Ioplay.ga is the fastest and safest converter. If you dont believe me, test it yourself</p>
+        <p>A:youtube-mp4.club is the fastest and safest converter. If you dont believe me, test it yourself</p>
       </div>
       <div class="w3-panel w3-pale-blue w3-leftbar w3-rightbar w3-border-blue">
         <h5>Q:Is it legal to use this converter?</h5>
-        <p>A:Ioplay.ga is completely legal to use and blocks downloads for copyrighted materials such as music</p>
+        <p>A:youtube-mp4.club is completely legal to use and blocks downloads for copyrighted materials such as music</p>
       </div>
       <div class="w3-panel w3-pale-red w3-leftbar w3-rightbar w3-border-red">
         <h5>Q:The converter isnt working, what should I do?</h5>
