--- a/terms.html
+++ b/terms.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Convert Youtube to Mp4 fast online</title>
+<title>Convert Youtube to Mp4 fast online - terms</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="YouTube Mp4 is the best online YouTube to Mp4 converter. Convert and download your favourite YouTube video&#039;s for free in webm, mp4, and 3gp formats.">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
