--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
 <title>Convert Youtube to Mp4 fast online - About</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Youtube mp4 is the best free youtube to mp4 converter. Convert youtube videos for free to mp4 and webm formats">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-dark-grey.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
