--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="msvalidate.01" content="983B473EB4B337D9EE70A18C4E62033D" />
-      <meta name="description" content="Youtube mp4 is the best free youtube to mp4 converter. Convert youtube videos for free to mp4 and webm formats">
-      <meta name="keywords" content="YouTube, Converter, Fast, Convert YouTube to Mp4, Youtube mp4 free converter, Videos to Mp4, YouTube to WEBM" />
+    <meta name="msvalidate.01" content="983B473EB4B337D9EE70A18C4E62033D" />
+      <meta name="description" content="YouTube MP4 is the best free YouTube to MP4 converter. Convert youTube videos for free to MP4 and webm formats">
+      <meta name="keywords" content="YouTube, Converter, Fast, Convert YouTube to MP4, YouTube MP4 free converter, Videos to Mp4, YouTube to WEBM" />
       <meta name="author" content="Centipede5">
       <meta property="og:url" content="https://youtube-mp4.club/" />
       <meta property="og:image" content="https://youtube-mp4.club/cover.png" />
-	    <meta property="og:image:width" content="480" />
-	    <meta property="og:image:height" content="246" />
-	    <meta property="og:type" content="website" />
-      <title>Convert Youtube to Mp4 online</title>
+        <meta property="og:image:width" content="480" />
+        <meta property="og:image:height" content="246" />
+        <meta property="og:type" content="website" />
+      <title>Convert YouTube to MP4 online</title>
       <link rel="alternate" href="https://youtube-mp4.club/" hreflang="en" />
       <link rel="alternate" href="https://youtube-mp4.club/" hreflang="x-default" />
       
@@ -51,12 +51,12 @@
       <div class = "w3-center" style ="margin-top:40px;">
          <header class="w3-container w3-theme w3-padding" id="myHeader">
             <div class="w3-center">
-               <h1 class="w3-xxxlarge">Convert Youtube to MP4</h1>
+               <h1 class="w3-xxxlarge">Convert YouTube to MP4</h1>
                <h5 class="">Free YouTube to MP4 converter</h5>
             </div>
          </header>
          <div class="w3-container w3-card-4 w3-light-grey w3-theme w3-margin w3-round">
-            <label class="w3-center" for="videourl"><h2 >Youtube Video URL</h2></label>
+            <label class="w3-center" for="videourl"><h2 >YouTube Video URL</h2></label>
             <div class="w3-row w3-section">
                <div class="w3-col" style="width:50px"><i class="w3-xlarge"></i></div>
                <div class="w3-rest">
