--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
 <head>
 <title>Convert Youtube to Mp4 fast online - terms</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="YouTube Mp4 is the best online YouTube to Mp4 converter. Convert and download your favourite YouTube video&#039;s for free in webm, mp4, and 3gp formats.">
+<meta name="description" content="Terms of use for youtube-mp4.club youtube converter">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-dark-grey.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
