--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       	<meta charset="UTF-8" />
       	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="msvalidate.01" content="983B473EB4B337D9EE70A18C4E62033D" />
-      	<meta name="description" content="Youtube mp4 is the best free youtube to mp4 converter. Convert youtube videos for free to mp4 and webm formats">
+      	<meta name="description" content="Convert YouTube videos to MP4 and WEBM files for fast download. This service is completly FREE, secure, and open source. Zero malware and intrusive ads!">
       	<meta name="keywords" content="YouTube, Converter, Fast, Convert YouTube to Mp4, Youtube mp4 free converter, Videos to Mp4, YouTube to WEBM" />
       	<meta name="author" content="Centipede5">
 	   
