--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         gtag('js', new Date());
         gtag('config', 'UA-141034412-1');
       </script>
+	<script data-ad-client="ca-pub-6620593314190555" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" async></script>
    </head>
    <body class="w3-theme-d3">
