--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       	<meta charset="UTF-8" />
       	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="msvalidate.01" content="983B473EB4B337D9EE70A18C4E62033D" />
-      	<meta name="description" content="Convert YouTube videos to MP4 and WEBM files for fast download. This YouTube to mp4 converter is completly FREE, secure, and open source. Zero malware and intrusive ads!">
+      	<meta name="description" content="Download YouTube videos in MP4 and WEBM formats for offline viewing. This YouTube downloader is completly FREE, secure, and open source. It is the fastest YouTube to mp4 converter with zero malware and intrusive ads!">
       	<meta name="keywords" content="YouTube, Converter, Fast, Convert YouTube to Mp4, Youtube mp4 free converter, Videos to Mp4, YouTube to WEBM" />
       	<meta name="author" content="Centipede5">
 	   
@@ -58,8 +58,8 @@
       <div class = "w3-center" style ="margin-top:40px;">
          <header class="w3-container w3-theme w3-padding" id="myHeader">
             <div class="w3-center">
-               <h1 class="w3-xxxlarge">Convert Youtube to MP4</h1>
-               <h5 class="">Free YouTube to MP4 converter</h5>
+               <h1 class="w3-xxxlarge">YouTube Video downloader</h1>
+               <h5 class="">Free YouTube to MP4 Converter</h5>
             </div>
          </header>
          <div class="w3-container w3-card-4 w3-light-grey w3-theme w3-margin w3-round">
