--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
             </form>
          </div>
       </div>
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5dc89eece7b2c8a6"></script>
+	   <footer class="w3-container w3-center w3-theme w3-xlarge" style ="position:fixed;bottom:0px">
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5dc89eece7b2c8a6"></script>
+	   </footer>
 
 
 <!--       <footer class="w3-container w3-center w3-theme w3-xlarge" style ="position:fixed;bottom:0px">
