--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="w3-row w3-section">
                <div class="w3-col" style="width:50px"><i class="w3-xlarge"></i></div>
                <div class="w3-rest">
-                  <input class="w3-input w3-border" id="videourl" type="text" placeholder="Paste Link Here (e.g. https://www.youtube.com/watch?v=_LBmUwi6mEo)" style="width:60%;margin-left:20%;">
+                  <input class="w3-input w3-border" id="videourl" type="text" placeholder="Paste Link Here (youtube.com or youtu.be video link)" style="width:60%;margin-left:20%;">
                   <button onclick = "document.getElementById('id01').style.display='block';window.convert();" class="w3-button w3-section w3-red w3-ripple w3-round w3-half" style="width:60%;margin-left:20%;"> CONVERT ></button>
                </div>
             </div>
