--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta property="og:site_name" content="Youtube-mp4.club"/>
 
 	   
-      	<title>Free online YouTube to MP4 converter - YouTube downloader</title>
+      	<title>Covert YouTube to MP4 free online - YouTube downloader</title>
       	<link rel="alternate" href="https://youtube-mp4.club/" hreflang="en" />
       	<link rel="alternate" href="https://youtube-mp4.club/" hreflang="x-default" />
       	<link rel="canonical" href="https://youtube-mp4.club/" />
@@ -58,7 +58,7 @@
       <div class = "w3-center" style ="margin-top:40px;">
          <header class="w3-container w3-theme w3-padding" id="myHeader">
             <div class="w3-center">
-               <h1 class="w3-xxxlarge">YouTube Video downloader</h1>
+               <h1 class="w3-xxxlarge">Covert YouTube to MP4</h1>
                <h5 class="">Free YouTube to MP4 Converter</h5>
             </div>
          </header>
