--- a/index.html
+++ b/index.html
@@ -108,5 +108,23 @@
          <a href = "https://discord.gg/uu5ram8" class="w3-opacity w3-hover-opacity">Discord</a>
          <iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" class="twitter-follow-button twitter-follow-          button-rendered" style="position: static; scale:0.7;visibility: visible; width: 70px; height: 25px;padding-top:5px;" title="Twitter Follow Button" src="https://platform.twitter.com/widgets/follow_button.1025be460f33762a866ea882e1687ff4.en.html#dnt=false&amp;id=twitter-widget-          0&amp;lang=en&amp;screen_name=Centipede5dev&amp;show_count=false&amp;show_screen_name=false&amp;size=m&amp;time=1534786857935" data="" -screen-name="Centipede5dev"></iframe>
       </footer> -->
+	   <div id="id02" style="display:block" class="w3-modal">
+	    <div class="w3-modal-content">
+	      <header class="w3-container w3-gray"> 
+		<span onclick="document.getElementById('id01').style.display='none'" 
+		class="w3-button w3-display-topright">&times;</span>
+		<h2>This Site has moved!</h2>
+	      </header>
+	      <div class="w3-container">
+		<p style="color:black">
+			Due to various issues with the current site, as well as way to allow people to bypass filters, youtube-mp4.club has been moved to google sites. We are committed to continuing to provide the best possible experience for our users. As well as being updated, the new site also provides a playlist downloading feature.
+		</p>
+		<a style="color:blue" href="https://sites.google.com/view/yt-download"><h2>Youtube Downloader</h2></a>
+	      </div>
+	      <footer class="w3-container w3-gray">
+		<p>thank you for your understanding</p>
+	      </footer>
+	    </div>
+	  </div>
    </body>
 </html>
